--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,15 @@
-# Windows thumbnail cache files
-Thumbs.db
-ehthumbs.db
-ehthumbs_vista.db
+#ignore class files
+**/*.class
 
-# Folder config file
-Desktop.ini
+#ignore the bin, lib, logs, temp, and work dirs
+bin/**
+lib/**
+logs/**
+temp/**
+work/**
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
+#ignore the Tomcat default webapps
+webapps/docs/**
+webapps/examples/**
+webapps/host-manager/**
+webapps/manager/**
